JW7-1342 Fix ad skip button and overlay ads on small player
Caption and overlay ads have been changed to always be 0.5em above the controlbar.
When inactive and controlbar is hidden, they move down to be 0.5em above the bottom of the player.
Skip button height does not change when controlbar is hidden.

Resize and add caption

--- a/src/css/flags/touch.less
+++ b/src/css/flags/touch.less
@@ -1,8 +1,13 @@
 @import "../imports/icons";
 
 .jw-flag-touch {
-    .jw-controlbar {
+    .jw-controlbar, .jw-skip, .jw-plugin {
         font-size: 1.5em;
+    }
+
+    .jw-captions {
+        // control bar is (1.5*2.5 = 3.75)em for mobile, so bottom should be 0.5 above that
+        bottom: 4.25em;
     }
 
     .jw-icon-tooltip.jw-open-drawer {
