--- a/src/css/imports/jwplayerelement.less
+++ b/src/css/imports/jwplayerelement.less
@@ -116,6 +116,7 @@
 
 .jw-plugin {
     position: absolute;
+    bottom: 3em;
 }
 
 .jw-cast-screen {
